--- a/VacationTracker/res/values/strings.xml
+++ b/VacationTracker/res/values/strings.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="days_avail">You have</string>
-    <string name="days_avail_as_of">days available, as of today.</string>
+    <string name="hours_avail">You have</string>
+    <string name="hours_avail_as_of">hours available, as of</string>
+    <string name="default_as_of_date">today</string>
     <string name="app_name">Vacation Tracker</string>
 
 </resources>
