--- a/VacationTracker/res/values/strings.xml
+++ b/VacationTracker/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="hours_avail">You have</string>
     <string name="hours_avail_as_of">hours available, as of</string>
     <string name="default_as_of_date">today</string>
-    <string name="app_name">Vacation Tracker</string>
+    <string name="app_name">Leave Tracker</string>
 
 </resources>
