--- a/VacationTracker/res/values/strings.xml
+++ b/VacationTracker/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="default_left_name">Sick Leave</string>
     <string name="default_center_name">Paid Leave</string>
     <string name="default_right_name">Comp Time</string>
-    <string name="use_hours_alert_title">Use Hours</string>
     <string name="use_hours_alert_msg">Add to your used leave</string>
-
+	<string name="quick_use_hours">Use Hours</string>
+	<string name="quick_use_date">Change As Of Date</string>
 </resources>
