--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,4 +12,16 @@
 	<string name="quick_use_hours">Use Hours</string>
 	<string name="quick_use_date">Change As Of Date</string>
 	<string name="leave_category_position">pos</string>
+	<string name="leave_pref_title">Category Title</string>
+	<string name="leave_pref_accrual">Leave Accrual</string>
+	<string name="leave_pref_accrual_on">Leave accrues based on hours per year</string>
+	<string name="leave_pref_accrual_off">Leave does not accrue for this category</string>
+	<string name="leave_pref_used">Used Leave Hours</string>
+	<string name="leave_pref_initial">Initial Leave Hours</string>
+	<string name="leave_pref_perYear">Leave Hours Per Year</string>
+	<string name="leave_pref_available">Hours of Leave Available</string>
+	<string name="leave_pref_start">Start Date</string>
+	<string name="leave_pref_start_sum">The date when you want your leave to begin accruing</string>
+	<string name="leave_pref_interval">Leave Interval</string>
+	<string name="leave_pref_interval_sum">How often your leave accrues</string>
 </resources>
