--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,4 +30,10 @@
 	<string name="leave_pref_cap_val_summary_carry">Set the number of leave hours you can carry at the end of the year</string>
 	<string name="leave_pref_cap_val_max">Leave Hours Max</string>
 	<string name="leave_pref_cap_val_summary_max">Set max number of leave hours you can have</string>
+	<string name="database_name">leavetracker.db</string>
+	<string name="ItemLabelDate">Date</string>
+	<string name="ItemLabelHours">Hours:</string>
+	<string name="ItemLabelNotes">Notes:</string>
+	<string name="separator"> - </string>
+	<string name="no_records">No items to display</string>
 </resources>
