--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -36,4 +36,5 @@
 	<string name="ItemLabelNotes">Notes:</string>
 	<string name="separator"> - </string>
 	<string name="no_records">No items to display</string>
+	<string name="load_msg">Loading...</string>
 </resources>
