--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -37,4 +37,10 @@
 	<string name="separator"> - </string>
 	<string name="no_records">No items to display</string>
 	<string name="load_msg">Loading...</string>
+	<string name="menu_settings">Settings</string>
+	<string name="menu_history">Leave History</string>
+	<string name="menu_edit">Edit</string>
+	<string name="menu_delete">Delete</string>
+	<string name="menu_add">Add</string>
+	<string name="intent_catid">com.jbalboni.vacation.catID</string>
 </resources>
