--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -44,5 +44,6 @@
 	<string name="menu_add">Add</string>
 	<string name="intent_catid">com.jbalboni.vacation.catID</string>
 	<string name="intent_catname">com.jbalboni.vacation.catName</string>
+	<string name="intent_itemid">com.jbalboni.vacation.itemID</string>
 	<string name="cat_title">Leave Categories</string>
 </resources>
