--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,9 +31,9 @@
 	<string name="leave_pref_cap_val_max">Leave Hours Max</string>
 	<string name="leave_pref_cap_val_summary_max">Set max number of leave hours you can have</string>
 	<string name="database_name">leavetracker.db</string>
-	<string name="ItemLabelDate">Date</string>
-	<string name="ItemLabelHours">Hours:</string>
-	<string name="ItemLabelNotes">Notes:</string>
+	<string name="ItemLabelDate">DATE</string>
+	<string name="ItemLabelHours">HOURS</string>
+	<string name="ItemLabelNotes">NOTES</string>
 	<string name="separator"> - </string>
 	<string name="no_records">No items to display</string>
 	<string name="load_msg">Loading...</string>
@@ -42,6 +42,7 @@
 	<string name="menu_edit">Edit</string>
 	<string name="menu_delete">Delete</string>
 	<string name="menu_add">Add</string>
+	<string name="menu_save">Save</string>
 	<string name="intent_catid">com.jbalboni.vacation.catID</string>
 	<string name="intent_catname">com.jbalboni.vacation.catName</string>
 	<string name="intent_itemid">com.jbalboni.vacation.itemID</string>
