Edit cat from home, cleanup

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,23 +12,23 @@
 	<string name="quick_use_hours">Use Leave</string>
 	<string name="quick_use_date">Change As Of Date</string>
 	<string name="leave_category_position">pos</string>
-	<string name="leave_pref_title">Category Title</string>
-	<string name="leave_pref_accrual">Leave Accrual</string>
+	<string name="leave_pref_title">CATEGORY TITLE</string>
+	<string name="leave_pref_accrual">LEAVE ACCRUAL</string>
 	<string name="leave_pref_accrual_on">Leave accrues based on hours per year</string>
 	<string name="leave_pref_accrual_off">Leave does not accrue for this category</string>
-	<string name="leave_pref_used">Used Leave Hours</string>
-	<string name="leave_pref_initial">Initial Leave Hours</string>
-	<string name="leave_pref_perYear">Leave Hours Per Year</string>
+	<string name="leave_pref_used">USED</string>
+	<string name="leave_pref_initial">INITIAL LEAVE HOURS</string>
+	<string name="leave_pref_perYear">LEAVE HOURS PER YEAR</string>
 	<string name="leave_pref_available">Hours of Leave Available</string>
 	<string name="leave_pref_start">Start Date</string>
 	<string name="leave_pref_start_sum">The date when you want your leave to begin accruing</string>
-	<string name="leave_pref_interval">Leave Interval</string>
+	<string name="leave_pref_interval">LEAVE INTERVAL</string>
 	<string name="leave_pref_interval_sum">How often your leave accrues</string>
-	<string name="leave_pref_cap_type">Leave Accrual Limit Type</string>
+	<string name="leave_pref_cap_type">LEAVE ACCRUAL LIMIT TYPE</string>
 	<string name="leave_pref_cap_type_summary">Set the type of leave hours limiting you have</string>
-	<string name="leave_pref_cap_val_carry">Leave Carryover Limit</string>
+	<string name="leave_pref_cap_val_carry">LEAVE CARRYOVER LIMIT</string>
 	<string name="leave_pref_cap_val_summary_carry">Set the number of leave hours you can carry at the end of the year</string>
-	<string name="leave_pref_cap_val_max">Leave Hours Max</string>
+	<string name="leave_pref_cap_val_max">LEAVE HOURS MAX</string>
 	<string name="leave_pref_cap_val_summary_max">Set max number of leave hours you can have</string>
 	<string name="database_name">leavetracker.db</string>
 	<string name="ItemLabelDate">DATE</string>
