2.x date picker doesn't prevent invalid dates

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -59,4 +59,5 @@
 	<string name="notes">Notes</string>
 	<string name="new_user_pref">newUser</string>
 	<string name="new_user_title">Initial Setup</string>
+	<string name="invalid_date">Invalid Date</string>
 </resources>
